--- a/CinemaBook/Scence/NewFeed/view/cell/VideoItemShowinnewfeedTableViewCell.xib
+++ b/CinemaBook/Scence/NewFeed/view/cell/VideoItemShowinnewfeedTableViewCell.xib
@@ -21,7 +21,7 @@
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J9G-9F-6zi">
                         <rect key="frame" x="5" y="5" width="310" height="290"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rsi-4G-LAH" customClass="YTPlayerView">
+                            <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rsi-4G-LAH" customClass="YTPlayerView">
                                 <rect key="frame" x="0.0" y="0.0" width="310" height="252"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
