--- a/CinemaBook/Scence/Home/view/HomeViewController.xib
+++ b/CinemaBook/Scence/Home/view/HomeViewController.xib
@@ -60,10 +60,7 @@
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Xin chào, Nguyễn Xuân Tiến Dũng" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6ly-WZ-Dbr">
-                                    <rect key="frame" x="78" y="8" width="250" height="14.5"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="250" id="g4S-fU-S63"/>
-                                    </constraints>
+                                    <rect key="frame" x="78" y="23" width="182" height="14.5"/>
                                     <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="12"/>
                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
@@ -75,11 +72,11 @@
                                 <constraint firstAttribute="trailing" secondItem="AS3-bT-AeP" secondAttribute="trailing" constant="20" id="4q6-kJ-Mf4"/>
                                 <constraint firstAttribute="height" constant="60" id="Im8-fS-zC2"/>
                                 <constraint firstAttribute="height" relation="lessThanOrEqual" constant="60" id="SAN-yl-TbZ"/>
-                                <constraint firstItem="6ly-WZ-Dbr" firstAttribute="leading" secondItem="hcb-62-GwD" secondAttribute="trailing" constant="8" id="WBp-kl-9um"/>
                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="ZPC-rR-fXV"/>
-                                <constraint firstItem="6ly-WZ-Dbr" firstAttribute="top" secondItem="620-D7-xZg" secondAttribute="top" constant="8" id="cUE-kr-Ndl"/>
+                                <constraint firstItem="6ly-WZ-Dbr" firstAttribute="centerY" secondItem="620-D7-xZg" secondAttribute="centerY" id="bdq-Qa-7VK"/>
                                 <constraint firstItem="hcb-62-GwD" firstAttribute="centerY" secondItem="620-D7-xZg" secondAttribute="centerY" id="cdA-5A-VnX"/>
                                 <constraint firstItem="AS3-bT-AeP" firstAttribute="centerY" secondItem="620-D7-xZg" secondAttribute="centerY" id="eU0-0T-jBc"/>
+                                <constraint firstItem="6ly-WZ-Dbr" firstAttribute="leading" secondItem="hcb-62-GwD" secondAttribute="trailing" constant="8" id="gjM-us-ZQB"/>
                             </constraints>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
