--- a/CinemaBook/Scence/Home/view/cell/section4/BannerMovieTableViewCell.xib
+++ b/CinemaBook/Scence/Home/view/cell/section4/BannerMovieTableViewCell.xib
@@ -26,14 +26,6 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="es5-gs-gvf">
                         <rect key="frame" x="5" y="20" width="310" height="272"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="h1" translatesAutoresizingMaskIntoConstraints="NO" id="ZAW-Uk-XNA">
-                                <rect key="frame" x="0.0" y="0.0" width="310" height="272"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="10"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </imageView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="upM-Fv-ApC">
                                 <rect key="frame" x="0.0" y="0.0" width="310" height="252"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -85,12 +77,8 @@
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="Lfc-xT-PLv" secondAttribute="bottom" id="C2J-tp-hZZ"/>
                             <constraint firstItem="Lfc-xT-PLv" firstAttribute="top" secondItem="upM-Fv-ApC" secondAttribute="bottom" id="D9e-Q2-yvw"/>
-                            <constraint firstAttribute="bottom" secondItem="ZAW-Uk-XNA" secondAttribute="bottom" id="DeR-i4-vpP"/>
                             <constraint firstItem="upM-Fv-ApC" firstAttribute="top" secondItem="es5-gs-gvf" secondAttribute="top" id="E4K-0T-Oia"/>
-                            <constraint firstItem="ZAW-Uk-XNA" firstAttribute="leading" secondItem="es5-gs-gvf" secondAttribute="leading" id="Lor-hn-PLn"/>
-                            <constraint firstItem="ZAW-Uk-XNA" firstAttribute="top" secondItem="es5-gs-gvf" secondAttribute="top" id="QTY-f6-RRg"/>
                             <constraint firstAttribute="trailing" secondItem="Lfc-xT-PLv" secondAttribute="trailing" id="bni-if-jfA"/>
-                            <constraint firstAttribute="trailing" secondItem="ZAW-Uk-XNA" secondAttribute="trailing" id="mQf-v9-Rxy"/>
                             <constraint firstAttribute="trailing" secondItem="upM-Fv-ApC" secondAttribute="trailing" id="rY0-rS-YRq"/>
                             <constraint firstItem="upM-Fv-ApC" firstAttribute="leading" secondItem="es5-gs-gvf" secondAttribute="leading" id="wQA-pE-CzG"/>
                             <constraint firstItem="Lfc-xT-PLv" firstAttribute="leading" secondItem="es5-gs-gvf" secondAttribute="leading" id="yMy-wn-GvZ"/>
@@ -100,22 +88,56 @@
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="Qo6-7c-VPV">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="20"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HAi-YZ-YJ7">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y3d-Gh-PLn">
                                 <rect key="frame" x="0.0" y="0.0" width="159.5" height="20"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HAi-YZ-YJ7">
+                                        <rect key="frame" x="0.0" y="0.0" width="159.5" height="20"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <state key="normal" title="Phim dang chieu">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f6w-1Q-RB2">
+                                        <rect key="frame" x="0.0" y="19" width="159.5" height="1"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="rf8-ep-41C"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Phim dang chieu">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mqZ-FX-BVF">
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="HAi-YZ-YJ7" secondAttribute="trailing" id="6Ld-cO-v3N"/>
+                                    <constraint firstAttribute="trailing" secondItem="f6w-1Q-RB2" secondAttribute="trailing" id="Jpb-Id-acF"/>
+                                    <constraint firstAttribute="bottom" secondItem="f6w-1Q-RB2" secondAttribute="bottom" id="KsH-gs-wwN"/>
+                                    <constraint firstItem="HAi-YZ-YJ7" firstAttribute="leading" secondItem="y3d-Gh-PLn" secondAttribute="leading" id="P87-bU-EdD"/>
+                                    <constraint firstItem="HAi-YZ-YJ7" firstAttribute="top" secondItem="y3d-Gh-PLn" secondAttribute="top" id="bke-XH-vyD"/>
+                                    <constraint firstAttribute="bottom" secondItem="HAi-YZ-YJ7" secondAttribute="bottom" id="iOr-O4-bT2"/>
+                                    <constraint firstItem="f6w-1Q-RB2" firstAttribute="leading" secondItem="y3d-Gh-PLn" secondAttribute="leading" id="oDX-rB-WhI"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FdU-Ze-nNV">
                                 <rect key="frame" x="160.5" y="0.0" width="159.5" height="20"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mqZ-FX-BVF">
+                                        <rect key="frame" x="0.0" y="0.0" width="159.5" height="20"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <state key="normal" title="Phim sap chieu">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Phim sap chieu">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                            </button>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="mqZ-FX-BVF" secondAttribute="bottom" id="BIL-oo-J9k"/>
+                                    <constraint firstItem="mqZ-FX-BVF" firstAttribute="top" secondItem="FdU-Ze-nNV" secondAttribute="top" id="Ggh-Eh-rmM"/>
+                                    <constraint firstAttribute="trailing" secondItem="mqZ-FX-BVF" secondAttribute="trailing" id="j2X-Y2-NT3"/>
+                                    <constraint firstItem="mqZ-FX-BVF" firstAttribute="leading" secondItem="FdU-Ze-nNV" secondAttribute="leading" id="v7s-8f-SMl"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -138,14 +160,12 @@
             <color key="backgroundColor" systemColor="systemGray6Color"/>
             <connections>
                 <outlet property="collection_view" destination="upM-Fv-ApC" id="Roi-rD-TpY"/>
-                <outlet property="image_poster" destination="ZAW-Uk-XNA" id="KCt-8Q-AiN"/>
                 <outlet property="lbl_name_movie" destination="qsi-eJ-31l" id="E7x-c0-sHa"/>
             </connections>
             <point key="canvasLocation" x="118.84057971014494" y="83.705357142857139"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="h1" width="144" height="180"/>
         <systemColor name="systemBlueColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
