--- a/CinemaBook/Scence/Account/view/sectiòn/SettingforAccountCustomerTableViewCell.xib
+++ b/CinemaBook/Scence/Account/view/sectiòn/SettingforAccountCustomerTableViewCell.xib
@@ -24,8 +24,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V4I-8V-bTe">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="62"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="folder" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="RPq-L3-VI9">
-                                        <rect key="frame" x="20" y="17" width="30" height="27.5"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ticket 1" translatesAutoresizingMaskIntoConstraints="NO" id="RPq-L3-VI9">
+                                        <rect key="frame" x="20" y="16" width="30" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="2u7-qE-LAS"/>
                                             <constraint firstAttribute="width" constant="30" id="AWZ-5h-cNU"/>
@@ -71,8 +71,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wff-Ig-5uA">
                                 <rect key="frame" x="0.0" y="63" width="320" height="61.5"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calendar" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Atm-oP-b6o">
-                                        <rect key="frame" x="20" y="16.5" width="30" height="27.5"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fast-food" translatesAutoresizingMaskIntoConstraints="NO" id="Atm-oP-b6o">
+                                        <rect key="frame" x="20" y="15.5" width="30" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="30" id="o3l-cR-8S9"/>
                                             <constraint firstAttribute="height" constant="30" id="zau-De-Kxb"/>
@@ -118,8 +118,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dOA-GL-xJX">
                                 <rect key="frame" x="0.0" y="125.5" width="320" height="62"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="BzW-1q-sBK">
-                                        <rect key="frame" x="20" y="17.5" width="30" height="27.5"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart" translatesAutoresizingMaskIntoConstraints="NO" id="BzW-1q-sBK">
+                                        <rect key="frame" x="20" y="16" width="30" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="Xte-Cw-jmh"/>
                                             <constraint firstAttribute="width" constant="30" id="nuY-a0-0OC"/>
@@ -152,15 +152,15 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bmv-Sh-2gQ">
                                 <rect key="frame" x="0.0" y="188.5" width="320" height="61.5"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lock.open.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="LjH-JS-8RU">
-                                        <rect key="frame" x="20" y="16" width="30" height="28.5"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="reset-password" translatesAutoresizingMaskIntoConstraints="NO" id="LjH-JS-8RU">
+                                        <rect key="frame" x="20" y="15.5" width="30" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="976-ML-urc"/>
                                             <constraint firstAttribute="width" constant="30" id="AIL-xL-cSM"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BẢO MẬT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aBB-MJ-zA6">
-                                        <rect key="frame" x="70" y="20.5" width="73" height="20.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="QUÊN MẬT KHẨU" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aBB-MJ-zA6">
+                                        <rect key="frame" x="70" y="20.5" width="136" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -200,11 +200,11 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="calendar" catalog="system" width="128" height="107"/>
-        <image name="folder" catalog="system" width="128" height="96"/>
-        <image name="heart.fill" catalog="system" width="128" height="107"/>
+        <image name="fast-food" width="512" height="512"/>
+        <image name="heart" width="512" height="512"/>
         <image name="icon-next-red" width="40" height="40"/>
-        <image name="lock.open.fill" catalog="system" width="128" height="110"/>
+        <image name="reset-password" width="512" height="512"/>
+        <image name="ticket 1" width="512" height="512"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
