--- a/CinemaBook/Scence/Signin/view/SigninViewController.xib
+++ b/CinemaBook/Scence/Signin/view/SigninViewController.xib
@@ -159,7 +159,7 @@
                                                         <constraint firstAttribute="height" constant="30" id="3bm-nI-3qo"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits"/>
+                                                    <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                                 </textField>
                                                 <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vui lòng nhập họ và tên" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EHW-m4-RNw">
                                                     <rect key="frame" x="8" y="39" width="345" height="14.333333333333336"/>
@@ -208,7 +208,7 @@
                                                         <constraint firstAttribute="height" constant="30" id="Qrj-Jh-hbt"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits"/>
+                                                    <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                                 </textField>
                                                 <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vui lòng nhập họ và tên" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S6c-Qn-IiE">
                                                     <rect key="frame" x="8" y="38.666666666666629" width="345" height="14.333333333333336"/>
