--- a/CinemaBook/Scence/Login/view/LoginViewController.xib
+++ b/CinemaBook/Scence/Login/view/LoginViewController.xib
@@ -12,6 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController" customModule="CinemaBook" customModuleProvider="target">
             <connections>
+                <outlet property="icon_eye" destination="3DG-Qe-T6K" id="VDR-bC-4Uo"/>
                 <outlet property="lbl_error_password" destination="z8z-hb-nmM" id="Twf-0h-cZ9"/>
                 <outlet property="lbl_error_username" destination="TuF-HJ-tMr" id="rYq-un-oVC"/>
                 <outlet property="txt_password" destination="8v4-nn-LJe" id="y7j-mD-QcQ"/>
@@ -167,6 +168,18 @@
                                                 <constraint firstAttribute="width" constant="22" id="ZnV-fz-inH"/>
                                             </constraints>
                                         </imageView>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pfc-Ag-ZNs">
+                                            <rect key="frame" x="324" y="0.0" width="50" height="50"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="50" id="sNO-XW-yhw"/>
+                                            </constraints>
+                                            <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <state key="normal" title="Button"/>
+                                            <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                            <connections>
+                                                <action selector="btn_close_eye:" destination="-1" eventType="touchUpInside" id="FmA-m0-L2x"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     <constraints>
@@ -176,10 +189,13 @@
                                         <constraint firstAttribute="height" constant="50" id="Lcr-ru-M2j"/>
                                         <constraint firstItem="3DG-Qe-T6K" firstAttribute="centerY" secondItem="shW-8X-eey" secondAttribute="centerY" id="RYl-wG-q3C"/>
                                         <constraint firstAttribute="trailing" secondItem="z8z-hb-nmM" secondAttribute="trailing" id="YJc-Gk-o9z"/>
+                                        <constraint firstAttribute="trailing" secondItem="Pfc-Ag-ZNs" secondAttribute="trailing" id="YgE-LG-1IZ"/>
                                         <constraint firstItem="z8z-hb-nmM" firstAttribute="leading" secondItem="shW-8X-eey" secondAttribute="leading" constant="10" id="Z0K-Ov-i4T"/>
+                                        <constraint firstItem="Pfc-Ag-ZNs" firstAttribute="top" secondItem="shW-8X-eey" secondAttribute="top" id="a43-UW-dNu"/>
                                         <constraint firstAttribute="trailing" secondItem="3DG-Qe-T6K" secondAttribute="trailing" constant="20" id="ccd-ct-0qx"/>
                                         <constraint firstItem="8v4-nn-LJe" firstAttribute="leading" secondItem="shW-8X-eey" secondAttribute="leading" constant="10" id="ika-QE-iKG"/>
                                         <constraint firstItem="8v4-nn-LJe" firstAttribute="top" secondItem="shW-8X-eey" secondAttribute="top" id="mvk-IH-zdb"/>
+                                        <constraint firstAttribute="bottom" secondItem="Pfc-Ag-ZNs" secondAttribute="bottom" id="yYv-KW-1PH"/>
                                     </constraints>
                                     <userDefinedRuntimeAttributes>
                                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
