--- a/CinemaBook/Scence/DialogShow/DialogPopupListCinema/DIalogPopUpShowListViewController.xib
+++ b/CinemaBook/Scence/DialogShow/DialogPopupListCinema/DIalogPopUpShowListViewController.xib
@@ -12,13 +12,12 @@
         <array key="Roboto-Bold.ttf">
             <string>Roboto-Bold</string>
         </array>
-        <array key="Roboto-Regular.ttf">
-            <string>Roboto-Regular</string>
-        </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DIalogPopUpShowListViewController" customModule="CinemaBook" customModuleProvider="target">
             <connections>
+                <outlet property="btn_show_dropdown" destination="Lxl-al-LbO" id="XxS-FP-pBM"/>
+                <outlet property="txt_dropdown_listcinema" destination="sIy-Nv-xNH" id="zDx-lw-T9B"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -56,29 +55,32 @@
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="9MH-6i-mZ0">
                                     <rect key="frame" x="20" y="0.0" width="291" height="50"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="chọn rạp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YiE-5u-nWy">
-                                            <rect key="frame" x="0.0" y="0.0" width="291" height="25"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                            <color key="textColor" systemColor="systemGray3Color"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CGV TÂN BÌNH" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lm4-uM-5M9">
-                                            <rect key="frame" x="0.0" y="25" width="291" height="25"/>
-                                            <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Chọn rạp" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sIy-Nv-xNH" customClass="JRDropDown">
+                                            <rect key="frame" x="0.0" y="0.0" width="291" height="50"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
                                     </subviews>
                                 </stackView>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lxl-al-LbO">
+                                    <rect key="frame" x="0.0" y="0.0" width="373" height="49"/>
+                                    <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <state key="normal" title="Button"/>
+                                    <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                </button>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
+                                <constraint firstItem="vRK-My-6At" firstAttribute="top" secondItem="Lxl-al-LbO" secondAttribute="bottom" id="0Dv-1N-0aM"/>
                                 <constraint firstAttribute="height" constant="50" id="FLJ-jf-Zui"/>
                                 <constraint firstItem="oqu-E2-Gp8" firstAttribute="centerY" secondItem="s01-3X-PTk" secondAttribute="centerY" id="HHj-5X-iD0"/>
+                                <constraint firstItem="Lxl-al-LbO" firstAttribute="top" secondItem="s01-3X-PTk" secondAttribute="top" id="KCg-tr-SzH"/>
                                 <constraint firstAttribute="bottom" secondItem="9MH-6i-mZ0" secondAttribute="bottom" id="MYA-6Q-PuN"/>
+                                <constraint firstAttribute="trailing" secondItem="Lxl-al-LbO" secondAttribute="trailing" id="NQa-Hn-mcy"/>
                                 <constraint firstItem="9MH-6i-mZ0" firstAttribute="leading" secondItem="s01-3X-PTk" secondAttribute="leading" constant="20" id="Wlo-YP-WfB"/>
                                 <constraint firstItem="oqu-E2-Gp8" firstAttribute="leading" secondItem="9MH-6i-mZ0" secondAttribute="trailing" constant="20" id="Xly-9w-ypd"/>
                                 <constraint firstAttribute="trailing" secondItem="vRK-My-6At" secondAttribute="trailing" id="Zq6-Aa-u16"/>
+                                <constraint firstItem="Lxl-al-LbO" firstAttribute="leading" secondItem="s01-3X-PTk" secondAttribute="leading" id="hF3-aY-JRn"/>
                                 <constraint firstAttribute="bottom" secondItem="vRK-My-6At" secondAttribute="bottom" id="n8M-SM-bPF"/>
                                 <constraint firstAttribute="trailing" secondItem="oqu-E2-Gp8" secondAttribute="trailing" constant="20" id="nxC-a5-Mpw"/>
                                 <constraint firstItem="9MH-6i-mZ0" firstAttribute="top" secondItem="s01-3X-PTk" secondAttribute="top" id="scb-TF-a34"/>
@@ -177,9 +179,6 @@
         </systemColor>
         <systemColor name="systemBlueColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemGray3Color">
-            <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
