--- a/CinemaBook/Scence/DialogShow/DialogPopUpShowListFoodChoose/section1/cellItemFood/ItemDialogFoodCommboTableViewCell.xib
+++ b/CinemaBook/Scence/DialogShow/DialogPopUpShowListFoodChoose/section1/cellItemFood/ItemDialogFoodCommboTableViewCell.xib
@@ -23,7 +23,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Teg-gQ-clz">
-                        <rect key="frame" x="20" y="5" width="200" height="30"/>
+                        <rect key="frame" x="42" y="5" width="200" height="30"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tên món ăn" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ab3-D7-Gd2">
                                 <rect key="frame" x="0.0" y="0.0" width="200" height="15"/>
@@ -50,17 +50,27 @@
                             <constraint firstAttribute="width" constant="22" id="uIU-Fc-Mcg"/>
                         </constraints>
                     </imageView>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vRE-By-PoU">
+                        <rect key="frame" x="10" y="9" width="22" height="22"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="22" id="WTE-yv-yUw"/>
+                            <constraint firstAttribute="width" constant="22" id="x3X-ab-lnB"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="Teg-gQ-clz" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="0TK-h7-1ty"/>
+                    <constraint firstItem="Teg-gQ-clz" firstAttribute="leading" secondItem="vRE-By-PoU" secondAttribute="trailing" constant="10" id="8Zo-na-FnH"/>
+                    <constraint firstItem="vRE-By-PoU" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="8cp-da-Bha"/>
                     <constraint firstAttribute="trailing" secondItem="Q2O-Lu-wJe" secondAttribute="trailing" constant="20" id="I70-fW-q3R"/>
-                    <constraint firstItem="Teg-gQ-clz" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="Zju-aw-rq6"/>
+                    <constraint firstItem="vRE-By-PoU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="Xce-AZ-Kvt"/>
                     <constraint firstItem="Q2O-Lu-wJe" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="a8f-q5-Ehg"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="icon_check" destination="Q2O-Lu-wJe" id="wH3-JU-azO"/>
+                <outlet property="image_food" destination="vRE-By-PoU" id="TmJ-BK-qml"/>
                 <outlet property="lbl_name_food" destination="Ab3-D7-Gd2" id="OcH-6a-qHT"/>
             </connections>
             <point key="canvasLocation" x="126.71755725190839" y="-11.267605633802818"/>
