--- a/CinemaBook/Scence/DialogShow/DialogPopUpShowListFoodChoose/section2/celItemFoodWater/ItemDialogFoodComboWaterTableViewCell.xib
+++ b/CinemaBook/Scence/DialogShow/DialogPopUpShowListFoodChoose/section2/celItemFoodWater/ItemDialogFoodComboWaterTableViewCell.xib
@@ -24,7 +24,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ly nước" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G8R-p2-7hf">
-                        <rect key="frame" x="20" y="12.666666666666664" width="56" height="19"/>
+                        <rect key="frame" x="42" y="12.666666666666664" width="56" height="19"/>
                         <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -90,18 +90,28 @@
                             <constraint firstItem="BmR-w5-mxj" firstAttribute="leading" secondItem="6iX-o6-8Qn" secondAttribute="leading" id="wrV-uv-evJ"/>
                         </constraints>
                     </view>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fTA-su-woF">
+                        <rect key="frame" x="10" y="11" width="22" height="22"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="22" id="0du-G7-6gH"/>
+                            <constraint firstAttribute="width" constant="22" id="5dH-tX-mzL"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="fTA-su-woF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="7sm-6X-Ahd"/>
                     <constraint firstItem="G8R-p2-7hf" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="AaH-0x-urp"/>
                     <constraint firstItem="6iX-o6-8Qn" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="UTk-8p-Sw9"/>
+                    <constraint firstItem="fTA-su-woF" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="aqp-di-w6y"/>
                     <constraint firstAttribute="trailing" secondItem="6iX-o6-8Qn" secondAttribute="trailing" constant="20" id="hTa-IA-70z"/>
-                    <constraint firstItem="G8R-p2-7hf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="ujZ-yf-N4b"/>
+                    <constraint firstItem="G8R-p2-7hf" firstAttribute="leading" secondItem="fTA-su-woF" secondAttribute="trailing" constant="10" id="pM8-RQ-XlN"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="btn_descreament" destination="BmR-w5-mxj" id="pX2-qg-fju"/>
                 <outlet property="btn_inscreament" destination="0YK-gf-k2b" id="mzR-0x-eWO"/>
+                <outlet property="image_view" destination="fTA-su-woF" id="XGq-5m-KFG"/>
                 <outlet property="lbl_name_food" destination="G8R-p2-7hf" id="Jiq-5U-ZOE"/>
                 <outlet property="lbl_number" destination="Er8-Qb-y5Y" id="wK7-Ll-ZPU"/>
             </connections>
