--- a/CinemaBook/Scence/StoreShoppingCart/Cart/view/CartViewController.xib
+++ b/CinemaBook/Scence/StoreShoppingCart/Cart/view/CartViewController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CartViewController" customModule="CinemaBook" customModuleProvider="target">
             <connections>
+                <outlet property="lbl_name_cinema" destination="Sqd-mp-UTt" id="U48-lo-pbW"/>
                 <outlet property="lbl_number" destination="TQU-ys-XaN" id="se8-w7-dK1"/>
                 <outlet property="lbl_total_number" destination="xgs-UM-T5o" id="AlQ-0b-FS4"/>
                 <outlet property="tableView" destination="2Uv-bc-crS" id="OWE-fo-7uf"/>
@@ -44,7 +45,7 @@
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R5u-YA-EJk">
                                     <rect key="frame" x="333" y="0.0" width="40" height="40"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shopping-cart" translatesAutoresizingMaskIntoConstraints="NO" id="t4L-ZY-X9H">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bag" translatesAutoresizingMaskIntoConstraints="NO" id="t4L-ZY-X9H">
                                             <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
                                         </imageView>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oOR-YK-y2b">
@@ -247,9 +248,9 @@
         </view>
     </objects>
     <resources>
+        <image name="bag" width="512" height="512"/>
         <image name="icon-back-blue" width="8.6666669845581055" height="17.333333969116211"/>
         <image name="mappin.and.ellipse" catalog="system" width="117" height="128"/>
-        <image name="shopping-cart" width="512" height="512"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
